--- a/README
+++ b/README
@@ -7,3 +7,6 @@ USO:
 >>> c.consulta('91370000')
 {'Localidade': u'Porto Alegre', 'Bairro': u'Vila Ipiranga', 'UF': u'RS', 'Logradouro': u'Rua Alberto Silva - at\xe9 965/966', 'CEP': u'91370-000'}
 
+TODO:
+* Testes!!!!
+* Listar resultados da busca, ao invés de abrir o primeiro automaticamente.
