Adicionado parametro para pegar primeiro resultado

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ USO:
 
 >>> from cep import Correios
 >>> c = Correios()
->>> c.consulta('91370000')
+>>> c.consulta('91370000', primeiro=True)
 {'Localidade': u'Porto Alegre', 'Bairro': u'Vila Ipiranga', 'UF': u'RS', 'Logradouro': u'Rua Alberto Silva - at\xe9 965/966', 'CEP': u'91370-000'}
 
 REQUIREMENTS:
